# g2o_prox

g2o/core/: CMakeLists.txt  base_ternary_edge.h  sparse_optimizer.cpp
g2o/stuff/: opengl_primitives.cpp  opengl_primitives.h
g2o/types/slam2d/: CMakeLists.txt  cache_prox.cpp  cache_prox.h  edge_prox.cpp  edge_prox.h  edge_se2.cpp  edge_se2.h  edge_switch_prox.cpp  edge_switch_prox.h  edge_switch_se2.cpp  edge_switch_se2.h  parameter_switch_weight.cpp  parameter_switch_weight.h  types_slam2d.cpp  vertex_prox.cpp  vertex_prox.h  vertex_se2.h  vertex_switch.cpp  vertex_switch.h
